# vla-tests

./: .gitignore  CLAUDE.md  README.md  agents.md
docs/: vla-models.md
groot/client/: README.md
groot/server/: README.md
pi05/client/: README.md  client_pi.py  pyproject.toml
pi05/server/: README-lerobot.md  README.md
smolvla/client/: README.md
smolvla/server/: README.md
